--- a/index.html
+++ b/index.html
@@ -86,6 +86,22 @@
     </div>
 
     <!--Third News Column-->
+    <div class="column small">
+      <img class="cookie" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png" />
+      <div class="news-bites">
+        <h3>NEWS BITES</h3>
+        <span class="bite">Cat Emoji Goes Viral</span>
+        <span class="bite">Buy Youtube Views</span>
+        <span class="bite">Home Business Advertising Ideas</span>
+        <span class="bite">Advertising Internet Online</span>
+        <span class="bite">Illustration in Marketing Materials</span>
+        <span class="bite">Finally a Top Secret Way You Can</span>
+      </div>
+    </div>
+  </div>
+
+  <!--Footer-->
+
 
     </head>
 
