--- a/index.html
+++ b/index.html
@@ -101,9 +101,22 @@
   </div>
 
   <!--Footer-->
+  <footer>
+      <div class="info">
+        <span class="title">MY Times</span>
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
+      </div>
+      <div class="copyright">
+        © 2016, My Times (A Division of Codecademy bite)
+      </div>
+    </footer>
 
 
-    </head>
 
   </body>
 </html>
